# ganime-fullbody-api

./: README.md  main.py  pyproject.toml
.upm/: store.json
