[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "runner"
version = "0.1.0"
[tool.poetry.dependencies]
fastapi = "^0.45.0"
python = "^3.8"
uvicorn = "^0.10.8"
torch = '^1.0.0'
numpy = '^1.0.0'
matplotlib = '^3.0.0'
[tool.poetry.dev-dependencies]
